tests/ui/ferrocene/compiler-arguments/emit/emit_no-option.rs
//@ check-fail
//@ compile-flags: --emit=
//~? ERROR unknown emission type

fn main() {}

// ferrocene-annotations: um_rustc_emit
